[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
parser = { path = "../parser" }
base64 = "0.22.1"
