[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
macros = { path = "../macros" }
parser = { path = "../parser" }
vpl = { path = "../vpl" }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.63"
libcrux = "0.0.2-alpha.3"
