[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
der = { version = "0.7.9", features = [ "alloc", "oid" ] }
macros = { path = "../macros" }
base64 = "0.22.1"
paste = "1.0.15"
