[package]
name = "vpl"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
clap = { version = "4.5.4", features = ["derive"] }
peg = "0.8.4"
thiserror = "1.0.63"
tempfile = "3.12.0"
